--- a/Code/Query_Two.ipynb
+++ b/Code/Query_Two.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,123 +22,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def no_listings(neighborhoods, listings):\n",
-    "    #drop the neighbourhood_group column\n",
-    "    neighborhoods = neighborhoods.drop(columns=['neighbourhood_group'])\n",
-    "    listings = listings[['neighbourhood_cleansed']]\n",
-    "\n",
-    "    #keep only the unique neighborhood_cleansed\n",
-    "    listings = listings.drop_duplicates()\n",
-    "\n",
-    "    #compare df_neighborhoods and df_listings. if the neighborhoods are present in both then create a separate column with boolean value\n",
-    "    neighborhoods['is_in_listings'] = neighborhoods['neighbourhood'].isin(listings['neighbourhood_cleansed'])\n",
-    "\n",
-    "    #print the neighborhoods that have the value of False\n",
-    "    print(neighborhoods[neighborhoods['is_in_listings'] == False])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Neighborhoods with no listings in Los Angeles\n",
       "         neighbourhood  is_in_listings\n",
       "40          Hansen Dam           False\n",
       "125           Bradbury           False\n",
       "230         Littlerock           False\n",
       "244  South Diamond Bar           False\n",
-      "268   Whittier Narrows           False\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Los Angeles\n",
-    "neighborhoods = pd.read_csv(\"LA_neighbourhoods.csv\")\n",
-    "listings = pd.read_csv(\"LA_listings.csv\")\n",
-    "\n",
-    "no_listings(neighborhoods, listings)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "268   Whittier Narrows           False\n",
+      "\n",
+      "Neighborhoods with no listings in Portland\n",
       "           neighbourhood  is_in_listings\n",
       "51          Maywood Park           False\n",
       "60  Northwest Industrial           False\n",
-      "92         Woodland Park           False\n"
-     ]
-    }
-   ],
-   "source": [
-    "#Portland\n",
-    "neighborhoods = pd.read_csv(\"neighbourhoods.csv\")\n",
-    "listings = pd.read_csv(\"listings.csv\")\n",
-    "\n",
-    "no_listings(neighborhoods, listings)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "92         Woodland Park           False\n",
+      "\n",
+      "Neighborhoods with no listings in Salem\n",
       "Empty DataFrame\n",
       "Columns: [neighbourhood, is_in_listings]\n",
-      "Index: []\n"
-     ]
-    }
-   ],
-   "source": [
-    "#Salem\n",
-    "neighborhoods = pd.read_csv(\"Salem_neighbourhoods.csv\")\n",
-    "listings = pd.read_csv(\"Salem_listings.csv\")\n",
-    "\n",
-    "no_listings(neighborhoods, listings)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Index: []\n",
+      "\n",
+      "Neighborhoods with no listings in San Diego\n",
       "      neighbourhood  is_in_listings\n",
       "8        Bella Lago           False\n",
       "34        Fenton St           False\n",
       "37      Golf Course           False\n",
       "40     Horton Plaza           False\n",
       "56          Miramar           False\n",
-      "103  Village Center           False\n"
+      "103  Village Center           False\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "#San Diego\n",
-    "neighborhoods = pd.read_csv(\"SD_neighbourhoods.csv\")\n",
-    "listings = pd.read_csv(\"SD_listings.csv\")\n",
+    "neighbourhoods = [\"LA_neighbourhoods.csv\", \"neighbourhoods.csv\", \"Salem_neighbourhoods.csv\", \"SD_neighbourhoods.csv\"]\n",
+    "listings = [\"LA_listings.csv\", \"listings.csv\", \"Salem_listings.csv\", \"SD_listings.csv\"]\n",
+    "cities = [\"Los Angeles\", \"Portland\", \"Salem\", \"San Diego\"]\n",
     "\n",
-    "no_listings(neighborhoods, listings)"
+    "for neighbourhood, listing, city in zip(neighbourhoods, listings, cities):\n",
+    "    hood = pd.read_csv(neighbourhood)\n",
+    "    ting = pd.read_csv(listing)\n",
+    "    \n",
+    "    #drop the neighbourhood_group column\n",
+    "    hood = hood.drop(columns=['neighbourhood_group'])\n",
+    "    ting = ting[['neighbourhood_cleansed']]\n",
+    "\n",
+    "    #keep only the unique neighborhood_cleansed\n",
+    "    ting = ting.drop_duplicates()\n",
+    "\n",
+    "    #compare df_neighborhoods and df_listings. if the neighborhoods are present in both then create a separate column with boolean value\n",
+    "    hood['is_in_listings'] = hood['neighbourhood'].isin(ting['neighbourhood_cleansed'])\n",
+    "\n",
+    "    #print the neighborhoods that have the value of False\n",
+    "    print(f\"Neighborhoods with no listings in {city}\")\n",
+    "    print(hood[hood['is_in_listings'] == False], end = '\\n\\n')\n"
    ]
   }
  ],
